force-app/main/default/objects/TripReportDistribution__c/TripReportDistribution__c.object-meta.xml
<CustomObject>
    <description>Trip report distribution list which can contain individual email address or a distribution group.</description>
    <label>Trip Report Distribution</label>
    <nameField>
        <label>Distribution List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trip Report Distribution</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>