force-app/main/default/objects/TripReportDistribution__c/fields/account__c.field-meta.xml
<CustomField>
    <fullName>account__c</fullName>
    <description>Master account record</description>
    <inlineHelpText>Master account record</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Trip_Report_Distribution_Lists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>