force-app/main/default/objects/TripReportDistribution__c/fields/distributionGroup__c.field-meta.xml
<CustomField>
    <fullName>distributionGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Distribution group to which trip report should be sent</description>
    <inlineHelpText>Distribution group to which trip report should be sent</inlineHelpText>
    <label>Distribution Group</label>
    <referenceTo>DistributionGroup__c</referenceTo>
    <relationshipName>Trip_Report_Distribution_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>