force-app/main/default/objects/TripReportDistribution__c/fields/emailAddress__c.field-meta.xml
<CustomField>
    <fullName>emailAddress__c</fullName>
    <description>Email address to which trip report should be emailed.</description>
    <inlineHelpText>Email address to which trip report should be emailed.</inlineHelpText>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>