force-app/main/default/objects/TripReportDistribution__c/validationRules/DistGroupOrEmailRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>DistGroupOrEmailRequired</fullName>
    <active>true</active>
    <description>Either distribution group or email address is required.</description>
    <errorConditionFormula>IsBlank( distributionGroup__c ) &amp;&amp; IsBlank(emailAddress__c)</errorConditionFormula>
    <errorMessage>Email address or distribution group is required to save trip report distribution record.</errorMessage>
</ValidationRule>