force-app/main/default/objects/TripReportDistribution__c/validationRules/Only_Acc_Owner_Can_Save_Or_Edit_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Acc_Owner_Can_Save_Or_Edit_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>account__r.OwnerId &lt;&gt; $User.Id</errorConditionFormula>
    <errorDisplayField>account__c</errorDisplayField>
    <errorMessage>Only Account Owner Can Save Or Edit The Record</errorMessage>
</ValidationRule>