force-app/main/default/objects/TripReportDistribution__c/validationRules/OnlyDistGroupOrEmailCanbeEntered.validationRule-meta.xml
<ValidationRule>
    <fullName>OnlyDistGroupOrEmailCanbeEntered</fullName>
    <active>true</active>
    <description>Only distribution group or email address can be entered</description>
    <errorConditionFormula>IsBlank( distributionGroup__c )=false &amp;&amp; IsBlank(emailAddress__c) = false</errorConditionFormula>
    <errorMessage>Both email address and distribution group can not be entered on a single report distribution record.</errorMessage>
</ValidationRule>